<resources>
    <string name="app_name">Trivia Quiz</string>
    <string name="title_trivia">Trivia Quiz</string>
    <string name="out_of_text">Question 45/89</string>
    <string name="next_button">Next</string>
    <string name="false_button">False</string>
    <string name="true_button">True</string>
    <string name="placeholder">Hello world this is where we are going to add the actual text to be shown!</string>
</resources>